--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -1,5 +1,5 @@
 body {
-    background: white url("images/01_bg.png") no-repeat fixed center ;
+    background: white url("images/01_bg.jpeg") no-repeat fixed center ;
     background-size: 1920px 1080px;
     font-family: 'Ubuntu', cursive;
 }
@@ -89,5 +89,5 @@ a:hover {
 }
 
 .share-btn {
-    size: 50px 50px;
+    width: 60px;
 }
