--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -80,14 +80,17 @@ a:hover {
 /* social share */
 .facebook-share {
     background-color: #004085;
-    color: white;
 }
 
 .twitter-share {
     background-color: deepskyblue;
-    color: white;
+}
+
+.linkedin-share {
+    background-color: #0056b3;
 }
 
 .share-btn {
-    width: 60px;
+    width: 50px;
+    color: white;
 }
