--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -23,28 +23,41 @@
 
                         {% with "share this in" as share_txt %}
                             {% with "https://teqitez.herokuapp.com/" as host %}
+
                                     {% with "title" as title %}
                                         {% with "twitter" as service %}
-                                            <div class="d-inline text-light">
+                                            <div class="d-inline">
                                                 <a class="btn twitter-share share-btn"
                                                    href="http://twitter.com/share?url={{ host }}{% url 'blog:detail' posts.id %}&amp;text={{ title }}"
                                                    target="_blank"
                                                    title="{{ share_txt }} {{ service }}">
-                                                    <i class="fa fa-twitter fa-2x"></i>
+                                                    <i class="fa fa-twitter"></i>
                                                 </a>
                                             </div>
                                         {% endwith%}
 
                                         {% with "facebook" as service %}
-                                            <div class="d-inline text-light">
+                                            <div class="d-inline">
                                                 <a class="btn facebook-share share-btn"
                                                    href="http://www.facebook.com/share.php?u={{ host }}{% url 'blog:detail' posts.id %}&amp;t={{ title }}"
                                                    target="_blank"
                                                    title="{{ share_txt }} {{ service }}">
-                                                <i class="fa fa-facebook fa-2x"></i>
+                                                <i class="fa fa-facebook"></i>
                                                 </a>
                                             </div>
                                         {% endwith%}
+
+                                        {% with "linkedin" as service %}
+                                            <a class="btn linkedin-share share-btn"
+                                               href="http://www.linkedin.com/shareArticle?mini=true&amp;url={{ host }}{% url 'blog:detail' posts.id %}&amp;title={{ title }}&amp;ro=false&amp;summary=&amp;source="
+                                               target="_blank"
+                                               title="{{ share_txt }} {{ service }}">
+                                                <i class="fa fa-linkedin"></i>
+                                            </a>
+                                        {% endwith %}
+
+
+
                                     {% endwith%}
                             {% endwith%}
                         {% endwith%}
