--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -90,6 +90,10 @@ a:hover {
     background-color: #0056b3;
 }
 
+.google-share {
+    background-color: #c82333;
+}
+
 .share-btn {
     width: 50px;
     color: white;
