messing with css social-share

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -52,7 +52,7 @@
                                                    href="#"
                                                    target="_blank"
                                                    title="{{ share_txt }} {{ service }}">
-                                                    <i class="fa fa-reddit"></i>
+                                                    <i class="fa fa-reddit-alien"></i>
                                                 </a>
                                             {% endwith %}
 
