--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,9 +25,13 @@
     </head>
     <body>
         <div class="container-fluid">
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
                     <a class="navbar-brand" href="{% url 'blog:index' %}">teqitez</a>
                 <div class="nav navbar-nav navbar-right">
+                    <a class="navbar-text text-light" href="https://teqitez.herokuapp.com/">home </a>|
+                    <a class="navbar-text text-light" href="#"> about</a>
+                </div>
+                <div class="nav navbar-nav text-left">
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark float-right" href="{% url 'blog:post-add' %}">Write</a>
                         <a class="btn btn-light" href="{% url 'blog:logout' %}">Logout</a>
