--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -33,34 +33,31 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" id="navbarCollapse">
-                    <div class="nav navbar-nav">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="navbar-text text-light" href="https://teqitez.herokuapp.com/">
+                                <a class="nav-link" href="https://teqitez.herokuapp.com/">
                                     <i class="fa fa-home"></i>
                                     home
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="navbar-text text-light" href="#">about</a>
+                                <a class="nav-link" href="#">about</a>
                             </li>
+                            {% if user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'blog:post-add' %}">Write</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'blog:logout' %}">Logout</a>
+                                </li>
+                            {% endif %}
                         </ul>
                         <form class="form-inline mt-2 mt-md-0">
                             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                             <button class="btn my-2 my-sm-0" type="submit">
                                 <i class="fa fa-search"></i>
-                                Search
                             </button>
                         </form>
-                    </div>
-                    <div class="nav navbar-nav text-right">
-                        {% if user.is_authenticated %}
-                            <a class="btn btn-dark float-right" href="{% url 'blog:post-add' %}">Write</a>
-                            <a class="btn btn-light" href="{% url 'blog:logout' %}">Logout</a>
-                        {% else %}
-                            <span class="navbar-text text-success">Not logged in</span>
-                        {% endif %}
-                    </div>
                 </div>
             </nav>
         </div>
