--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -31,7 +31,5 @@
         <br>
 
     </div><br><br>
-    <div class="footer container align-self-center text-center text-light">Copyright &copy; Tuan Doan, all rights served</div>
-
-
+    <div class="footer container container-fluid align-self-center text-center text-light">Copyright &copy; Tuan Doan, all rights served</div>
 {% endblock %}
