--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,7 +23,7 @@
     <body>
         <div class="container-fluid">
             <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
-                <a class="navbar-brand" href="{% url 'blog:index' %}">teqitez</a>
+                <a class="navbar-brand" href="https://teqitez.herokuapp.com/blog">teqitez</a>
                 <button class="navbar-toggler"
                         type="button" data-toggle="collapse" data-target="#navbarCollapse"
                         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                 <div class="navbar-collapse collapse" id="navbarCollapse">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="https://teqitez.herokuapp.com/">
+                                <a class="nav-link" href="{% url 'blog:index' %}">
                                     <i class="fa fa-home"></i>
                                     home
                                 </a>
