--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -31,5 +31,5 @@
         <br>
 
     </div><br><br>
-    <div class="footer container container-fluid align-self-center text-center text-light">Copyright &copy; Tuan Doan, all rights served</div>
+    <div class="footer container container-fluid align-self-center text-center text-light">&copy; Tuan Doan 2017. All rights reserved</div>
 {% endblock %}
