--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -92,6 +92,6 @@
     {% else %}
         <h1>You haven't post anything!</h1>
     {% endif %}
-        <div class="footer container-fluid container align-self-center text-center text-light">Copyright &copy; Tuan Doan, all rights served</div>
+        <div class="footer container-fluid container align-self-center text-center text-light">&copy; Tuan Doan 2017. All rights reserved</div>
     {% endblock %}
 </div>
