--- a/blog/templates/blog/cover.html
+++ b/blog/templates/blog/cover.html
@@ -47,6 +47,6 @@
                 crossorigin="anonymous"></script>
 
     </body>
-    <footer class="fixed-bottom text-light footer" id="footer" >&copy; Tuan Doan 2017. All rights reserved</footer>
+    <footer class="fixed-bottom text-light footer" id="footer" >&copy; 2017 Tuan Doan. All rights reserved</footer>
 </html>
 
