--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,14 +6,14 @@
     {% if object_list %}
 
             {% for posts in object_list reversed %}
-                <div class="container align-self-center bg-white post">
-                    <h3><b><a class="post-title text-dark text-center" href="{% url 'blog:detail' posts.id %}">{{ posts.post_title }}</a></b></h3>
+                <div class="container align-self-center bg-white post text-center">
+                    <h3><a class="post-title text-dark text-center" href="{% url 'blog:detail' posts.id %}">{{ posts.post_title }}</a></h3>
                     <div class="post-info text-center">
                         <i>{{ posts.publish_date }}</i> by <a href="https://twitter.com/tu4ndoan">Tuan Doan</a>
                     </div>
                     <br><br>
                     <a href="{% url 'blog:detail' posts.id %}"><img src="{{ posts.feature_image.url }}" class="post-img"><br><br></a>
-                        <h5 class="hooker">&lt;awesome&gt; {{ posts.hooker }}&lt;&sol;awesome&gt; -- <a href="{% url 'blog:detail' posts.id %}" class="btn btn-default">Read</a></h5>
+                    <h5 class="hooker text-dark"><a href="{% url 'blog:detail' %}"><span style="color: green">&lt;awesome&gt;</span> {{ posts.hooker }} <span style="color: green">&lt;&sol;awesome&gt;</span></a></h5>
                     <br>
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
