--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -13,7 +13,13 @@
                     </div>
                     <br><br>
                     <a href="{% url 'blog:detail' posts.id %}"><img src="{{ posts.feature_image.url }}" class="post-img"><br><br></a>
-                    <h5 class="hooker text-dark"><a href="{% url 'blog:detail' posts.id %}"><span style="color: green">&lt;awesome&gt;</span> {{ posts.hooker }} <span style="color: green">&lt;&sol;awesome&gt;</span></a></h5>
+                    <h5 class="hooker text-dark">
+                        <a href="{% url 'blog:detail' posts.id %}">
+                            <span style="color: green">&lt;awesome&gt;</span>
+                            <span style="color: black">{{ posts.hooker }}</span>
+                            <span style="color: green">&lt;&sol;awesome&gt;</span>
+                        </a>
+                    </h5>
                     <br>
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
