--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -6,7 +6,7 @@
         <h1 class="text-light text-center">{{ blogpost.post_title}}</h1>
         <div class="bg-white post-container">
             <img src="{{ blogpost.feature_image.url }}" class="post-img">
-            <p class="text-dark post-text">{{ blogpost.content }}</p>
+            <span class="text-dark post-text">{{ blogpost.content }}</span>
             <hr>
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' blogpost.id %}">delete</a>
