--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,14 +1,13 @@
 {% extends 'blog/base.html' %}
-
+{% load markdown_deux_tags %}
 {% block body %}
     <br><br>
     <div class="container post-container">
         <h1 class="text-light text-center">{{ blogpost.post_title}}</h1>
         <div class="bg-white post-container">
             <img src="{{ blogpost.feature_image.url }}" class="post-img">
-            <p class="text-dark post-text">{{ blogpost.content }}</p>
-            <code>{{ blogpost.content }}</code>
-            <pre>{{ blogpost.content }}</pre>
+            <span class="text-dark post-text">{{ blogpost.content }}</span><br>
+            {{ blogpost.content|markdown }}
             <hr>
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' blogpost.id %}">delete</a>
