--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -5,8 +5,20 @@
     <div class="container post-container">
         <h1 class="text-light text-center">{{ blogpost.post_title}}</h1>
         <div class="bg-white post-container">
-            <img src="{{ blogpost.feature_image.url }}" class="post-img">
-            {{ blogpost.content|markdown }}
+            <div class="">
+                <img src="{{ blogpost.feature_image.url }}" class="post-img">
+            </div>
+            <img id="myImg" src="{{ blogpost.feature_image.url }}" alt="nice and free images">
+
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+              <span class="close">×</span>
+              <img class="modal-content" id="img01">
+              <div id="caption"></div>
+            </div>
+            <div class="post-text">
+                {{ blogpost.content|markdown }}
+            </div>
             <hr>
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' blogpost.id %}">delete</a>
