--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -110,6 +110,8 @@ a:hover {
     color: white;
 }
 
+.share-btn:hover {color:white;}
+
 .social-share {
     display: block;
     margin: auto;
@@ -123,6 +125,9 @@ a:hover {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
+    width: 80%;
+    align-self: center;
+    text-align: center;
 }
 
 #myImg:hover {opacity: 0.7;}
